--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
@@ -70,7 +70,8 @@
 </section>
 <!-- /banner-section -->
 <!-- gift-section -->
-<section class="container py-5">
+<section class="container-fluid py-5 bg-light">
+    <div class="container">
     <div class="row">
         <div class="col-12 mb-5">
             <div class="banner-font fw-bold">
@@ -80,215 +81,27 @@
     </div>
     <div class="row">
         <div class="col-3 mb-5">
-            <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
-                <mat-card-header>
-                    <mat-card-title>
-                        <span class="badge shadow-sm">Best seller</span>
-                    </mat-card-title>
-                </mat-card-header>
+            <mat-card class="bg-white shadow-sm gift-card p-3" appearance="outlined">         
                 <mat-card-content>
-                    <div class="d-flex justify-content-center mt-3">
-                        <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                    <span class="badge shadow-sm bg-dark text-white">CODE98#547</span>
+                    <div class="d-flex justify-content-center my-5">
+                        <img mat-card-image height="200" width="200" src="assets/images/water-bottle.png" />
                     </div> 
-                </mat-card-content>
-                <mat-card-footer class="p-3">
-                    <div>
+                    <div class="">
                         <div>
-                            <h6 class="mb-0">Copper Bottle</h6>
+                            <div>Copper Bottle</div>
                         </div>
-                        <div>stylish,eco-friendly</div>
+                        <div style="font-size: 12px;">This product is most popular and most rated by customer. I will prefer this.</div>
                     </div>
                     <div>
-                        <button mat-flat-button class="button-mh-60 w-100 my-3 bg-dark">Claim Gift</button>
+                        <button mat-flat-button class="button-mh-60 w-100 bg-dark mt-2">Claim Gift</button>
                     </div>
-
-                </mat-card-footer>
+                </mat-card-content>                
             </mat-card>
         </div>
-        <div class="col-3 mb-5">
-            <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
-                <mat-card-header>
-                    <mat-card-title>
-                        <span class="badge shadow-sm">Best seller</span>
-                    </mat-card-title>
-                </mat-card-header>
-                <mat-card-content>
-                    <div class="d-flex justify-content-center mt-3">
-                        <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
-                    </div>                    
-                </mat-card-content>
-                <mat-card-footer class="p-3">
-                    <div>
-                        <div>
-                            <h6 class="mb-0">Copper Bottle</h6>
-                        </div>
-                        <div>stylish,eco-friendly</div>
-                    </div>
-                    <div>
-                        <button mat-flat-button class="button-mh-60 w-100 my-3 bg-dark">Claim Gift</button>
-                    </div>
-
-                </mat-card-footer>
-            </mat-card>
-        </div>
-        <div class="col-3 mb-5">
-            <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
-                <mat-card-header>
-                    <mat-card-title>
-                        <span class="badge shadow-sm">Best seller</span>
-                    </mat-card-title>
-                </mat-card-header>
-                <mat-card-content>
-                    <div class="d-flex justify-content-center mt-3">
-                        <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
-                    </div>
-                </mat-card-content>
-                <mat-card-footer class="p-3">
-                    <div>
-                        <div>
-                            <h6 class="mb-0">Copper Bottle</h6>
-                        </div>
-                        <div>stylish,eco-friendly</div>
-                    </div>
-                    <div>
-                        <button mat-flat-button class="button-mh-60 w-100 my-3 bg-dark">Claim Gift</button>
-                    </div>
-
-                </mat-card-footer>
-            </mat-card>
-        </div>
-        <div class="col-3 mb-5">
-            <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
-                <mat-card-header>
-                    <mat-card-title>
-                        <span class="badge shadow-sm">Best seller</span>
-                    </mat-card-title>
-                </mat-card-header>
-                <mat-card-content>
-                    <div class="d-flex justify-content-center mt-3">
-                        <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
-                    </div>
-                </mat-card-content>
-                <mat-card-footer class="p-3">
-                    <div>
-                        <div>
-                            <h6 class="mb-0">Copper Bottle</h6>
-                        </div>
-                        <div>stylish,eco-friendly</div>
-                    </div>
-                    <div>
-                        <button mat-flat-button class="button-mh-60 w-100 my-3 bg-dark">Claim Gift</button>
-                    </div>
-
-                </mat-card-footer>
-            </mat-card>
-        </div>
-        <div class="col-3 mb-5">
-            <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
-                <mat-card-header>
-                    <mat-card-title>
-                        <span class="badge shadow-sm">Best seller</span>
-                    </mat-card-title>
-                </mat-card-header>
-                <mat-card-content>
-                    <div class="d-flex justify-content-center mt-3">
-                        <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
-                    </div>
-                </mat-card-content>
-                <mat-card-footer class="p-3">
-                    <div>
-                        <div>
-                            <h6 class="mb-0">Copper Bottle</h6>
-                        </div>
-                        <div>stylish,eco-friendly</div>
-                    </div>
-                    <div>
-                        <button mat-flat-button class="button-mh-60 w-100 my-3 bg-dark">Claim Gift</button>
-                    </div>
-
-                </mat-card-footer>
-            </mat-card>
-        </div>
-        <div class="col-3 mb-5">
-            <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
-                <mat-card-header>
-                    <mat-card-title>
-                        <span class="badge shadow-sm">Best seller</span>
-                    </mat-card-title>
-                </mat-card-header>
-                <mat-card-content>
-                    <div class="d-flex justify-content-center mt-3">
-                        <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
-                    </div>
-                </mat-card-content>
-                <mat-card-footer class="p-3">
-                    <div>
-                        <div>
-                            <h6 class="mb-0">Copper Bottle</h6>
-                        </div>
-                        <div>stylish,eco-friendly</div>
-                    </div>
-                    <div>
-                        <button mat-flat-button class="button-mh-60 w-100 my-3 bg-dark">Claim Gift</button>
-                    </div>
-
-                </mat-card-footer>
-            </mat-card>
-        </div>
-        <div class="col-3 mb-5">
-            <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
-                <mat-card-header>
-                    <mat-card-title>
-                        <span class="badge shadow-sm">Best seller</span>
-                    </mat-card-title>
-                </mat-card-header>
-                <mat-card-content>
-                    <div class="d-flex justify-content-center mt-3">
-                        <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
-                    </div>
-                </mat-card-content>
-                <mat-card-footer class="p-3">
-                    <div>
-                        <div>
-                            <h6 class="mb-0">Copper Bottle</h6>
-                        </div>
-                        <div>stylish,eco-friendly</div>
-                    </div>
-                    <div>
-                        <button mat-flat-button class="button-mh-60 w-100 my-3 bg-dark">Claim Gift</button>
-                    </div>
-
-                </mat-card-footer>
-            </mat-card>
-        </div>
-        <div class="col-3 mb-5">
-            <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
-                <mat-card-header>
-                    <mat-card-title>
-                        <span class="badge shadow-sm">Best seller</span>
-                    </mat-card-title>
-                </mat-card-header>
-                <mat-card-content>
-                    <div class="d-flex justify-content-center mt-3">
-                        <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
-                    </div>
-                </mat-card-content>
-
-                <mat-card-footer class="p-3">
-                    <div>
-                        <div>
-                            <h6 class="mb-0">Copper Bottle</h6>
-                        </div>
-                        <div>stylish,eco-friendly</div>
-                    </div>
-                    <div>
-                        <button mat-flat-button class="button-mh-60 w-100 my-3 bg-dark">Claim Gift</button>
-                    </div>
-
-                </mat-card-footer>
-            </mat-card>
-        </div>
+       
     </div>
+</div>
 </section>
 <!-- /gift-section -->
 
