added images in the products folder

--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
@@ -72,36 +72,36 @@
 <!-- gift-section -->
 <section class="container-fluid py-5 bg-light">
     <div class="container">
-    <div class="row">
-        <div class="col-12 mb-5">
-            <div class="banner-font fw-bold">
-                Claim your <span class="text-primary">Reward</span>
+        <div class="row">
+            <div class="col-12 mb-5">
+                <div class="banner-font fw-bold">
+                    Claim your <span class="text-primary">Reward</span>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-3 mb-5">
-            <mat-card class="bg-white shadow-sm gift-card p-3" appearance="outlined">         
-                <mat-card-content>
-                    <span class="badge shadow-sm bg-dark text-white">CODE98#547</span>
-                    <div class="d-flex justify-content-center my-5">
-                        <img mat-card-image height="200" width="200" src="assets/images/water-bottle.png" />
-                    </div> 
-                    <div class="">
-                        <div>
-                            <div>Copper Bottle</div>
+        <div class="row">
+            <div class="col-3 mb-5">
+                <mat-card class="bg-white shadow-sm gift-card p-3" appearance="outlined">
+                    <mat-card-content>
+                        <span class="badge shadow-sm bg-dark text-white fs-12">CODE98#547</span>
+                        <div class="d-flex justify-content-center my-5">
+                            <img mat-card-image height="200" width="200" src="assets/products/water-bottle.png" />
                         </div>
-                        <div style="font-size: 12px;">This product is most popular and most rated by customer. I will prefer this.</div>
-                    </div>
-                    <div>
-                        <button mat-flat-button class="button-mh-60 w-100 bg-dark mt-2">Claim Gift</button>
-                    </div>
-                </mat-card-content>                
-            </mat-card>
+                        <div>
+                            <div>
+                                <div>Copper Bottle</div>
+                            </div>
+                            <div class="fs-12">This product is most popular and most rated by customers.</div>
+                        </div>
+                        <div>
+                            <button mat-flat-button class="button-mh-60 w-100 bg-dark mt-2">Claim Gift</button>
+                        </div>
+                    </mat-card-content>
+                </mat-card>
+            </div>
+
         </div>
-       
     </div>
-</div>
 </section>
 <!-- /gift-section -->
 
