--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
@@ -82,7 +82,7 @@
         <div class="row">
             @for(item of productList;track $index){
                 <div class="col-3 mb-5">
-                    <mat-card class="bg-white shadow-sm gift-card p-3" appearance="outlined"> 
+                    <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined"> 
                         <mat-card-content>
                             <span class="badge shadow-sm bg-dark text-white fs-12">{{item.code}}</span>
                             <div class="d-flex justify-content-center my-5">
