added product folder in images

--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
@@ -40,7 +40,7 @@
                     </mat-card>
                 </div>
                 <div class="col-4 mb-4">
-                    <mat-card class="banner-card banner-card-bg-2 shadow-sm p-3 py-5" appearance="outlined">
+                    <mat-card class="banner-card banner-card-bg-2 position-relative shadow-sm p-3 py-5" appearance="outlined">
                         <img mat-card-image src="assets/images/banner-5.png" />
                     </mat-card>
                 </div>
@@ -50,17 +50,17 @@
                     </mat-card>
                 </div>
                 <div class="col-4">
-                    <mat-card class="banner-card banner-card-bg-4 shadow-sm p-3 py-5" appearance="outlined">
+                    <mat-card class="banner-card banner-card-bg-4 position-relative shadow-sm p-3 py-5" appearance="outlined">
                         <img mat-card-image src="assets/images/banner-4.png" />
                     </mat-card>
                 </div>
                 <div class="col-4">
-                    <mat-card class="banner-card banner-card-bg-5 shadow-sm p-3" appearance="outlined">
+                    <mat-card class="banner-card banner-card-bg-5 position-relative shadow-sm p-3" appearance="outlined">
                         <img mat-card-image src="assets/images/banner-2.png" />
                     </mat-card>
                 </div>
                 <div class="col-4">
-                    <mat-card class="banner-card banner-card-bg-6 shadow-sm p-3 py-5" appearance="outlined">
+                    <mat-card class="banner-card banner-card-bg-6 position-relative shadow-sm p-3 py-5" appearance="outlined">
                         <img mat-card-image src="assets/images/banner-6.png" />
                     </mat-card>
                 </div>
@@ -95,7 +95,7 @@
                                 <div class="fs-12">{{item.description}}</div>
                             </div>
                             <div>
-                                <button mat-flat-button class="button-mh-60 w-100 bg-dark mt-2">{{item.text}}</button>
+                                <button mat-flat-button class="button-mh-60 w-100 bg-dark mt-2"><mat-icon>celebration</mat-icon>{{item.text}}</button>
                             </div>
                         </mat-card-content>
                     </mat-card>
