--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.css
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.css
@@ -38,6 +38,6 @@
     border-radius: 25px;    
 }
 
-.active-product-card{
-    border: 2px solid red
+.product-reward-card.active-product-card{
+    opacity: 0.2;
 }
