add confirmation modal

--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
@@ -86,12 +86,15 @@
                 <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
 
                     <div class="gift-confirmation-button">                        
-                        <div>Please confirm your gift by clicking this button.</div>
-                        <button mat-flat-button class="button-mh-60 w-100 bg-dark mt-2">
-                            <mat-icon>celebration</mat-icon>Confirm Reward
+                        <div>Are you sure want to proceed with this.</div>
+                        <button mat-flat-button class="button-mh-45 bg-danger mt-2">
+                            <mat-icon>close</mat-icon>No
+                        </button>
+                        <button mat-flat-button class="button-mh-45 bg-success mt-2">
+                            <mat-icon>check</mat-icon>Yes
                         </button>
                     </div>
-                    
+
                     <mat-card-content [ngClass]="{'active-product-card': activeIndex === i}">
                         <span class="badge shadow-sm bg-dark text-white fs-12">{{ item.code }}</span>
                         <div class="d-flex justify-content-center my-5">
